img issue for stretched in enroll component fixed

--- a/src/Views/StaticSite/Components/EnrollmentForm/formstyles.scss
+++ b/src/Views/StaticSite/Components/EnrollmentForm/formstyles.scss
@@ -1407,10 +1407,12 @@ input[type='radio']:checked::before {
           min-width: 250px;
 
           img {
-            width: 100%;
-            height: 100%;
-            padding: 17px;
             border-radius: 30px;
+            height: 100%;
+            width: 100%;
+            padding: 17px;
+            aspect-ratio: 16 / 13.2;
+            object-fit: cover;
           }
         }
       }
